# First-Sight

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  default.fs  default.vs  gmon.out  main.cpp  test.txt
data/convert/: main.cpp
data/undat-1.0/: Makefile  README  Undat.cpp  dirt.mtl  undat  undat.cpp
include/: Camera.h  Context.h  Drawable.h  EventHandler.h  Font.h  Functionoid.h  Model.h  Object.h  Octree.h  Projection.h  Shader.h  Text.h  Texture.h  Undat.h  Vector.h
lib/png++/doc/html/: annotated.html  classes.html  classpng_1_1basic__pixel__buffer-members.html  classpng_1_1basic__pixel__buffer.html  classpng_1_1consumer-members.html  classpng_1_1consumer.html  classpng_1_1def__image__info__holder-members.html  classpng_1_1def__image__info__holder.html  classpng_1_1detail_1_1allowed__bit__depth_3_011_01_4.html  classpng_1_1detail_1_1allowed__bit__depth_3_012_01_4.html  classpng_1_1detail_1_1allowed__bit__depth_3_014_01_4.html  classpng_1_1detail_1_1basic__packed__pixel__proxy-members.html  classpng_1_1detail_1_1basic__packed__pixel__proxy.html  classpng_1_1end__info-members.html  (+212 more)
lib/png++/example/: pixel_generator
lib/snappy/: Makefile  config.status  libsnappy.la  libtool  snappy_unittest
lib/snappy/.deps/: snappy-sinksource.Plo  snappy-stubs-internal.Plo  snappy.Plo  snappy_unittest-snappy-test.Po  snappy_unittest-snappy_unittest.Po
lib/snappy/.libs/: libsnappy.lai  libsnappy.so.1  libsnappy.so.1.0.1  snappy_unittest
shaders/: default.fs  default.gs  default.vs  text.fs  text.vs
src/: CMakeLists.txt  Camera.cpp  Context.cpp  Drawable.cpp  EventHandler.cpp  Font.cpp  Main.cpp  Model.cpp  Object.cpp  Projection.cpp  Shader.cpp  Text.cpp  Texture.cpp  Vector.cpp
tempdata/: dirt.blend  dirt.dat.bak
